media/sonarr/sonarr-deploy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  labels:
    app: sonarr
    app.kubernetes.io/name: sonarr
spec:
  selector:
    app.kubernetes.io/name: sonarr
  ports:
  - name: http
    port: 80
    targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  labels:
    app: sonarr
    app.kubernetes.io/name: sonarr
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: sonarr
  template:
    metadata:
      labels:
        app: sonarr
        app.kubernetes.io/name: sonarr
    spec:
      nodeSelector:
        topology.kubernetes.io/zone: austin
      containers:
      - name: sonarr
        image: linuxserver/sonarr
        volumeMounts:
          - name: sonarr-config
            mountPath: /config
          - name: media
            subPath: "Video/TV Shows"
            mountPath: /tv
          - name: media
            subPath: downloads
            mountPath: /downloads
        startupProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 5
          failureThreshold: 30
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 60
          failureThreshold: 5
          timeoutSeconds: 10
        readinessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 60
          failureThreshold: 5
          timeoutSeconds: 10
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
        ports:
        - name: http
          containerPort: 8989
      volumes:
      - name: sonarr-config
        persistentVolumeClaim:
            claimName: sonarr
      - name: media
        persistentVolumeClaim:
            claimName: media-speicher
